adding blogs, comments
