# src/modules/comment/comment.model.js
@@ -1,0 +1,38 @@
+const mongoose = require('mongoose');
+
+const commentSchema = new mongoose.Schema(
+  {
+    content: {
+      type: String,
+      required: [true, 'Comment content is required'],
+      trim: true,
+      minlength: [1, 'Comment must be at least 1 character'],
+      maxlength: [1000, 'Comment cannot exceed 1000 characters'],
+    },
+    author: {
+      type: mongoose.Schema.Types.ObjectId,
+      ref: 'User',
+      required: true,
+      index: true,
+    },
+    blog: {
+      type: mongoose.Schema.Types.ObjectId,
+      ref: 'Blog',
+      required: true,
+      index: true,
+    },
+  },
+  {
+    timestamps: true,
+  }
+);
+
+commentSchema.index({ blog: 1, createdAt: -1 });
+
+commentSchema.methods.isAuthor = function (userId) {
+  return this.author.toString() === userId.toString();
+};
+
+const Comment = mongoose.model('Comment', commentSchema);
+
+module.exports = Comment;
